2021-06-04  Chris Dumez  <cdumez@apple.com>

        Worker.constructor throws an exception when the url param is an empty string
        https://bugs.webkit.org/show_bug.cgi?id=226637

        Reviewed by Darin Adler.

        Update existing tests to reflect behavior change.

        * fast/workers/worker-constructor-expected.txt:
        * fast/workers/worker-constructor.html:
        * http/tests/workers/worker-invalid-url-expected.txt:
        * http/tests/workers/worker-invalid-url.html:

2021-06-04  Diego Pino Garcia  <dpino@igalia.com>

        [GLIB][GTK] Unreviewed test gardening. Remove flaky tests that have been constantly passing for the last 4000 revisions.

        * platform/glib/TestExpectations:
        * platform/gtk/TestExpectations:

2021-06-04  Wenson Hsieh  <wenson_hsieh@apple.com>

        [iOS] Meaningful click heuristic should account for media state changes
        https://bugs.webkit.org/show_bug.cgi?id=226655
        rdar://78330664

        Reviewed by Tim Horton and Devin Rousso.

        Add a layout test to verify that tapping to play or pause a video triggers "meaningful" synthetic clicks.

        * fast/events/ios/meaningful-click-when-playing-media-expected.txt: Added.
        * fast/events/ios/meaningful-click-when-playing-media.html: Added.

2021-06-04  Devin Rousso  <drousso@apple.com>

        Web Inspector: Uncaught Exception: undefined is not an object (evaluating 'InspectorBackend.Enum.Page.ResourceType')
        https://bugs.webkit.org/show_bug.cgi?id=226664

        Reviewed by Joseph Pecoraro.

        * inspector/protocol/enum.html: Added.
        * inspector/protocol/enum-expected.txt: Added.

2021-06-04  Brady Eidson  <beidson@apple.com>

        Enforce a quota in window.sessionStorage
        rdar://78507096 and https://bugs.webkit.org/show_bug.cgi?id=226337

        Reviewed by Chris Dumez.

        * platform/ios-wk1/TestExpectations:
        * platform/ios/ios/storage/domstorage/5mb-quota.html: Removed.