@@ -737,8 +737,11 @@ static bool rareNonInheritedDataChangeRequiresLayout(const StyleRareNonInherited
         return true;
 #endif
 
-    if (first.aspectRatioType != second.aspectRatioType || first.aspectRatioWidth != second.aspectRatioWidth || first.aspectRatioWidth != second.aspectRatioHeight)
+    if (first.aspectRatioType != second.aspectRatioType
+        || first.aspectRatioWidth != second.aspectRatioWidth
+        || first.aspectRatioHeight != second.aspectRatioHeight) {
         return true;
+    }
 
     return false;
 }
