@@ -1,3 +1,13 @@
+2021-06-05  Cameron McCormack  <heycam@apple.com>
+
+        Diff aspect-ratio property values correctly
+        https://bugs.webkit.org/show_bug.cgi?id=226673
+
+        Reviewed by Rob Buis.
+
+        * fast/css/aspect-ratio-no-relayout-expected.txt: Added.
+        * fast/css/aspect-ratio-no-relayout.html: Added.
+
 2021-06-04  Chris Dumez  <cdumez@apple.com>
 
         Worker.constructor throws an exception when the url param is an empty string
